--- a/plugins/OpenVR/CMakeLists.txt
+++ b/plugins/OpenVR/CMakeLists.txt
@@ -9,7 +9,7 @@
 
 
 
-# By convention, plugin names begin with "MinVR_"
+# Plugin names must begin with "MinVR_"
 project(MinVR_OpenVR)
 
 
@@ -29,74 +29,65 @@ set (HEADERFILES
 )
 
 
+# Define the target
+add_library(${PROJECT_NAME} SHARED ${HEADERFILES} ${SOURCEFILES})
+
+target_include_directories(${PROJECT_NAME} PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>  # for headers when building
+    $<INSTALL_INTERFACE:include/MinVR${MINVR_VERSION_STR}/${PROJECT_NAME}>  # for client in install mode
+)
+
+
 # Setup dependency on libMinVR:
-list(APPEND MY_INC_DIRS src)
-list(APPEND MY_LIB_DIRS ${CMAKE_BINARY_DIR})
-list(APPEND MY_LIBS MinVR)
+target_include_directories(${PROJECT_NAME} PUBLIC 
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../src>  # for headers when building
+    $<INSTALL_INTERFACE:include/MinVR${MINVR_VERSION_STR}>  # for client in install mode
+)
+target_link_libraries(${PROJECT_NAME} MinVR)
 
 
 # Setup dependency on OpenVR:
 include(UseOpenVR)
-UseOpenVR()
-list(APPEND MY_INC_DIRS ${OPENVR_INCLUDE_DIR})
-list(APPEND MY_LIB_DIRS ${OPENVR_LIBRARY_DIR})
-list(APPEND MY_LIBS ${OPENVR_LIBRARIES})
+UseOpenVR(${PROJECT_NAME} PUBLIC)
+
 
 # Setup dependency on OpenGL:
 include(UseOpenGL)
-UseOpenGL()
-list(APPEND MY_INC_DIRS ${OPENGL_INCLUDE_DIR})
-list(APPEND MY_LIB_DIRS ${OPENGL_LIBRARY_DIR})
-list(APPEND MY_LIBS ${OPENGL_LIBRARIES})
+UseOpenGL(${PROJECT_NAME} PUBLIC)
+
 
 # Setup dependency on GLEW (only needed on Windows):
 if (WIN32)
   include(UseGLEW)
-  UseGLEW()
-  list(APPEND MY_INC_DIRS ${GLEW_INCLUDE_DIR})
-  list(APPEND MY_LIB_DIRS ${GLEW_LIBRARY_DIR})
-  list(APPEND MY_LIBS ${GLEW_LIBRARIES})
+  UseGLEW(${PROJECT_NAME} PUBLIC)
 endif()
+
 
 # Setup dependency on C++-11:
 if (MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    target_compile_options(${PROJECT_NAME} PRIVATE -std=c++11)
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
+  target_compile_options(${PROJECT_NAME} PRIVATE -std=c++11 -stdlib=libc++)
 endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.7")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
+    target_compile_options(${PROJECT_NAME} PRIVATE -std=gnu++0x)
   else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    target_compile_options(${PROJECT_NAME} PRIVATE -std=c++11)
   endif()
 endif()
 
 
-# Create the shared library:
-include_directories(${MY_INC_DIRS})
-link_directories(${MY_LIB_DIRS})
-add_library(${PROJECT_NAME} SHARED ${HEADERFILES} ${SOURCEFILES})
-target_link_libraries(${PROJECT_NAME} ${MY_LIBS} ${LIBS_ALL})
-
-
-# If we have dependencies that were not found pre-installed on the system
-# and that will be built as part of the MinVR build process, then these
-# must be listed as dependencies of the current project so that cmake
-# builds them first.
-if (${OPENVR_AUTOBUILT})
-    add_dependencies(${PROJECT_NAME} OpenVR)
-endif()
-
-
 # Installation:
-install( TARGETS ${PROJECT_NAME}
-         LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
-         ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
-         RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+install(TARGETS ${PROJECT_NAME} EXPORT MinVRTargets COMPONENT ${PROJECT_NAME}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/MinVR${MINVR_VERSION_STR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/MinVR${MINVR_VERSION_STR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
+)
+install(FILES ${HEADERFILES} DESTINATION include/MinVR${MINVR_VERSION_STR}/${PROJECT_NAME} COMPONENT ${PROJECT_NAME})
 
 
 # For better organization when using an IDE with folder structures:
